sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:9: error: not found: value tab
    if (tab(i+1) < tab(i)){
        ^AlgBubbleSort2:9: error: not found: value tab
    if (tab(i+1) < tab(i)){
                   ^