sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var tab_has_changed = false;
  var i = 0;
  
  do{
    tab_has_changed = false;
  for (i <- 0 until (getNombreValeurs	- i) - 1){
    if (tab(i+1) < tab(i)){
    	echange(i, i+1);
      tab_has_changed = true;
    }
  }
  }while(tab_has_changed);
}